--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              크리의 기술블로그
+bio:                'CNU C.S.E.'
+description:        "이예찬의 기술블로그 입니다."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
@@ -37,9 +37,9 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
-facebook:           username
+email:              firecare@naver.com
+#twitter:            username
+#facebook:           username
 github-url:         http://github.com/yechanlee
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
@@ -50,7 +50,7 @@ instagram:          yellongs
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+steam:              firecare
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
