이전 포스트들 삭제

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   yechanlee
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -50,7 +50,7 @@ instagram:          yellongs
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              firecare
+steam:              베니크리
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
