--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'CNU C.S.E.'
 description:        "이예찬의 기술블로그 입니다."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/yechan.jpeg'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
