--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              크리의 기술블로그
-bio:                'CNU C.S.E.'
+title:               yellong's blog
+bio:                'Lotte Data Communications Company Software Engineer '
 description:        "이예찬의 기술블로그 입니다."
 reading_time:       true
 words_per_minute:   200
