--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:               yellong's blog
-bio:                'Lotte Data Communications Company Software Engineer '
+bio:                '롯데정보통신 / CNU CSE '
 description:        "이예찬의 기술블로그 입니다."
 reading_time:       true
 words_per_minute:   200
