--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ email:              firecare@naver.com
 #facebook:           username
 github-url:         yechanlee
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:          firecare@naver.com
+linkedin:          yechan-lee-273ba5b8
 #xing:              username
 instagram:          yellongs
 #lastfm:            username
