--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ email:              firecare@naver.com
 github-url:         yechanlee
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          yechan-lee-273ba5b8
+tistory:			yellongs
 #xing:              username
 instagram:          yellongs
 #lastfm:            username
@@ -50,7 +51,7 @@ instagram:          yellongs
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              베니크리
+#steam:              베니크리
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
