naver blog added

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ github-url:         yechanlee
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          yechan-lee-273ba5b8
 tistory:			yellongs
+naver:				firecare
 #xing:              username
 instagram:          yellongs
 #lastfm:            username
